# python-figo

./: .flake8  .gitignore  .isort.cfg  .travis.yml  AUTHORS  CONTRIB.md  ChangeLog  README.md  console_demo.py  lauris.txt  pyproject.toml  requirements-test.txt  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
figo/: __init__.py  credentials.py  exception.py  exceptions.py  figo.py  models.py  utils.py  version.py
tests/: conftest.py  test_accesses.py  test_catalog_and_language.py  test_integrations.py  test_models.py  test_notifications.py  test_securities.py  test_session.py  test_user_and_token.py  test_writing_methods.py
web_demo/: __main__.py
web_demo/templates/: banking_root.html
