[metadata]
name = python-figo
author = figo GmbH
author_email = devs@figo.io
description-file = README.md
home-page = https://www.figo.io
license = BSD License
classifiers =
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.6
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Topic :: Office/Business :: Financial
  Topic :: Internet

[files]
packages = figo

[wheel]
universal=1

[extras]
webdemo =
  Flask
  flask_bootstrap
  Jinja2