[metadata]
name = python-figo
author = figo GmbH
author_email = devs@figo.io
description = Python bindings for the figo Connect API: http://docs.figo.io
long_description = Python bindings for the figo Connect API: http://docs.figo.io
home-page = https://www.figo.io
license = BSD License
classifiers =
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Topic :: Office/Business :: Financial
  Topic :: Internet

[files]
packages = figo

[wheel]
universal=1
